--- a/hello/platforms/android/res/layout/main.xml
+++ b/hello/platforms/android/res/layout/main.xml
@@ -7,7 +7,7 @@
 <TextView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Hello World, helloWorld"
+    android:text="Hello World, Whelmo"
     />
 </LinearLayout>
 
